--- a/config/database.yml
+++ b/config/database.yml
@@ -49,6 +49,7 @@ test:
 #
 production:
   <<: *default
-  database: climateriaux_production
-  username: climateriaux
-  password: <%= ENV['CLIMATERIAUX_DATABASE_PASSWORD'] %>
+  database: <%= ENV["DB_NAME"] %>
+  username: <%= ENV["DB_USERNAME"] %>
+  password: <%= ENV["DB_PASSWORD"] %>
+  host: <%=ENV["DB_HOST"] %>
