--- a/circle.yml
+++ b/circle.yml
@@ -4,10 +4,5 @@ test:
 deployment:
   staging:
     branch: develop
-    commands:
-      - "[[ ! -s \"$(git rev-parse --git-dir)/shallow\" ]] || git fetch --unshallow"
-      - git push git@heroku.com:climateriaux.git $CIRCLE_SHA1:refs/heads/master
-      - heroku run bundle install -a climateriaux
-      - heroku run rake bower:install -a climateriaux
-      - heroku run rake db:migrate -a climateriaux:
-          timeout: 400 # if your deploys take a long time
+    heroku:
+      appname: climateriaux
